[package]
name = "tera-macro"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.19.1"
syn = "2.0.39"
proc-macro2 = "1.0.69"
serde = "1.0.192"
serde_json = "1.0.108"
unicode-segmentation = "1.10.1"
