[package]
name = "tera-macro"
version = "0.0.1"
edition = "2021"
description = "Macro for writing compile time Rust code with Tera templates"
repository = "https://github.com/mcmah309/tera-macro"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.19.1"
syn = { version = "2.0.39", features = ["full"] }
proc-macro2 = "1.0.69"
serde = "1.0.192"
serde_json = "1.0.108"
unicode-segmentation = "1.10.1"
anyhow = "1.0.75"


[features]
default = []
# If enabled, debug info will be printed to stdout during build. Useful for debugging.
debug_print = []